--- a/pages/preguntas frec.html
+++ b/pages/preguntas frec.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PREGUUNTAS  FRECUENTES</title> 
+    <title>PREGUUNTAS  FRECUENTES</title>
+    <link rel="stylesheet" href="..//styles/style-copia.css">
     <link rel="stylesheet" href="../styles/style.css">
 </head>                                 
 
