--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <img class="logo" src="./images/logo4.jpg" alt="logo de la empresa">
 
-    <h1 class="titulo-empresa">FERRETERIA ONLINE </h1>
+    <h1 class="titulo-empresa">FERRETERIA ONLINE</h1>
 
         <section class="links-header">
             <a href="./pages/productos.html"><strong>IR A PRODUCTOS</strong></a>
@@ -33,12 +33,13 @@
     <h1 class="titulo-index">OFERTAS DEL MES</h1>
 
             <section class="contenedor">
+
                 <div class="seccion">
                     <h2 class="titulo-secc-ind">Caja de herramientas + Taladro</h2>
                     <p class="precios">$65.000</p>
                     <img src="./images/caja.jp.webp" alt="imagen de caja de herramientas">
                     <img src="./images/taladro-solo.jpg" alt="imagen de taladro">
-                    <button>COMPRAR AHORA</button>
+                    <button class="boton">COMPRAR AHORA</button>
                 </div>
 
 
@@ -47,7 +48,7 @@
                     <p class="precios">$40.000</p>
                     <img src="./images/caja.jp.webp" alt="imagen caja de herramientas">
                     <img src="./images/llave-tubo.jpg" alt="imagen kit llave de tubo">
-                    <button>COMPRAR AHORA</button>
+                    <button class="boton">COMPRAR AHORA</button>
                 </div>   
 
                 <div class="seccion">
@@ -56,7 +57,7 @@
                     <img src="./images/llave.jpg" alt="imagen de llave inglesa">           
                     <img src="./images/martillo.jpg" alt="imagen de martillo">
                     <img src="./images/serrucho.jpg" alt="imagen de serrucho">
-                    <button>COMPRAR AHORA</button>
+                    <button class="boton">COMPRAR AHORA</button>
                 </div>
             </section>
 
